<resources>
    <string name="app_name">Species Record</string>
    <string name="FAB_text">Add new</string>
    <string name="show_images">图片模式</string>
    <string name="all_record">所有记录</string>
    <string name="new_record">新的记录</string>
    <string name="import_record">导入记录</string>
    <string name="confirm">确定</string>
    <string name="new_record_text">请输入新记录的名称</string>
    <string name="optional">选填</string>
    <string name="kingdom_description">界</string>
    <string name="phylum_description">门</string>
    <string name="class_description">纲</string>
    <string name="order_description">目</string>
    <string name="family_description">科</string>
    <string name="genus_description">属</string>
    <string name="species_description">种</string>
    <string name="optional_note">备注(选填)</string>
    <string name="optional_address">地点(选填)</string>
    <string name="optional_date">日期(选填)</string>
    <string name="add_confirm">确认添加</string>
    <string name="add_photos_button">添加图片(已选0张)</string>
    <string name="delete">删除</string>
    <string name="is_lightweight">轻量模式</string>
    <string name="share_record">分享记录</string>
    <string name="contact">联系作者</string>

</resources>